Upload Final Challenge Analysis

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1289,8 +1289,15 @@
     "lgnd.get_title().set_fontsize(11)\n",
     "plt.grid(True)\n",
     "#save image\n",
-    "plt.savefig(\"Pyber_fare_summary.png\", bbox_inches = 'tight')"
+    "plt.savefig(\"analysis/Pyber_fare_summary.png\", bbox_inches = 'tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
